@@ -1,5 +1,8 @@
 Revision history for Net-XMPP2
 
+         - added a $dont_retrieve_vcard to ::Ext::VCard, to
+           prevent retrieval when session_ready event comes.
+
 0.3 Mon Jan 28 23:00:58 CET 2009
          - fixed a bug in disconnect error reporting.
          - fixed bad parameter passing of AnyEvent::XMPP::Client to
